# substrate-subxt

./: Cargo.toml
.github/workflows/: nightly.yml  rust.yml
cli/: Cargo.toml
codegen/: Cargo.toml
codegen/src/api/: storage.rs
examples/: Cargo.toml
examples/examples/: beefy_subscribe.rs
integration-tests/: Cargo.toml
macro/: Cargo.toml
metadata/: Cargo.toml
src/: config.rs  error.rs  events.rs  lib.rs  metadata.rs  rpc.rs  subscription.rs
subxt/: Cargo.toml
subxt/src/: beefy.rs  config.rs  lib.rs  rpc.rs
test-runtime/: Cargo.toml  build.rs
test-runtime/src/: lib.rs
testing/integration-tests/: Cargo.toml
testing/test-runtime/: Cargo.toml
