[workspace]
members = [".", "client", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["tokio1"]
client = ["substrate-subxt-client"]
# jsonrpsee http client can be configured to use tokio02 or tokio1.
tokio02 = ["jsonrpsee-http-client/tokio02"]
tokio1 = ["jsonrpsee-http-client/tokio1"]

[dependencies]
async-trait = "0.1.49"
log = "0.4.14"
thiserror = "1.0.24"
futures = "0.3.13"
jsonrpsee-proc-macros = "=0.2.0-alpha.6"
jsonrpsee-ws-client = "=0.2.0-alpha.6"
jsonrpsee-http-client = { version = "=0.2.0-alpha.6", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
dyn-clone = "1.0.4"

frame-metadata = "13.0.0"
frame-support = "3.0.0"
sp-runtime = "3.0.0"
sp-version = "3.0.0"
pallet-indices = "3.0.0"
hex = "0.4.3"
sp-std = "3.0.0"
application-crypto = { version = "3.0.0", package = "sp-application-crypto" }
pallet-staking = "3.0.0"

sp-rpc = { version = "3.0.0", package = "sp-rpc" }
sp-core = { version = "3.0.0", package = "sp-core" }
substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }
pallet-mmr-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }

beefy-gadget-rpc = { git = "https://github.com/octopus-network/grandpa-bridge-gadget", branch = "octopus" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
frame-system = "3.0.0"
pallet-balances = "3.0.0"
sp-keyring = "3.0.0"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
assert_matches = "1.5.0"

[patch.crates-io]
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-manual-seal = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-client-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-common = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-runtime-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmi = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-informant = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-light = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-peerset = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-proposer-metrics = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-server = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-state-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-graph = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-executive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-metadata = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-atomic-swap = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-bounties = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-collective = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-democracy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-offchain-worker = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-parallel = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-identity = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-indices = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-lottery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-membership = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-multisig = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-nicks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-node-authorization = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-offences = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-proxy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-recovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scheduler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scored-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-society = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-treasury = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-tips = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-utility = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-vesting = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-allocator = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-vrf = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-database = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-debug-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keyring = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-compact = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-panic-handler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-sandbox = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-serializer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-test-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-wasm-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }

[patch."https://github.com/paritytech/substrate"]
sc-client-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-chain-spec-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-cli = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-babe-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-manual-seal = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-slots = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-consensus-uncles = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-client-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-common = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-runtime-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmi = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-executor-wasmtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-finality-grandpa-warp-sync = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-informant = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-light = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-gossip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-network-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-peerset = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-proposer-metrics = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-rpc-server = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-service-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-state-db = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-sync-state-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-telemetry = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-tracing-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sc-transaction-graph = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-procedural-tools-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-support-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-system-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-executive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
frame-metadata = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-assets = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-atomic-swap = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-balances = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-bounties = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-collective = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-democracy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-offchain-worker = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-example-parallel = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-identity = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-im-online = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-indices = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-lottery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-membership = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-mmr-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-multisig = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-nicks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-node-authorization = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-offences = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-proxy = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-randomness-collective-flip = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-recovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scheduler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-scored-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-session-benchmarking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-society = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-staking-reward-curve = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-sudo = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-treasury = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-tips = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-utility = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
pallet-vesting = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-allocator = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-api-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-application-crypto-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-arithmetic-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authority-discovery = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-authorship = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-block-builder = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-blockchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-chain-spec = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-babe = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-pow = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-consensus-vrf = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-database = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-debug-derive = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-inherents = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keyring = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-compact = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-npos-elections-fuzzer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-offchain = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-panic-handler = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-rpc = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-proc-macro = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-runtime-interface-test-wasm-deprecated = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-sandbox = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-serializer = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-session = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-staking = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tasks = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-test-primitives = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-timestamp = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-tracing = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-utils = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
sp-wasm-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
substrate-prometheus-endpoint = { git = 'https://github.com/octopus-network/substrate.git', branch = 'master' }
